Updated fonts, added favicon

--- a/index_style.css
+++ b/index_style.css
@@ -35,7 +35,6 @@ body{
     
 	font-size:1em;
 
-    background-color: #F7F1E3;
     
     
 }
@@ -87,7 +86,7 @@ header{
 
     position: absolute;
     width:100%;
-    
+    height: 100%;
     
     display: flex;
     flex-flow:column;
@@ -114,7 +113,7 @@ header{
 
 h1{
     
-    font-family: 'AlbertusNova-Regular';
+    font-family: 'AlbertusNova-Regular', "Book Antiqua", "Palatino Linotype", serif;
     font-weight: normal;
     font-style: normal;
     font-size: 3em;
@@ -130,7 +129,8 @@ h1{
 
 h2{
     
-    font-family: 'Futura';
+    font-family: "futura-pt", 'Arial', 'Helvetica', sans-serif;
+    font-weight: 400;
     text-transform: uppercase;
     letter-spacing: .05em;
     max-width: 80%;
@@ -138,7 +138,7 @@ h2{
     font-size: 1em; 
     line-height: 1.5;
     text-align: center;
-    color: #332727;
+    color: #8e8b80;
 
 
 }
@@ -151,7 +151,7 @@ h2{
 a{
     
     text-decoration: none;
-     font-family: 'AlbertusNova-Regular';
+     font-family: 'AlbertusNova-Regular', "Book Antiqua", "Palatino Linotype", serif;
     font-size: 1.125em;
     color: #0A6A8B; 
     transition: 0.3s;
@@ -200,8 +200,9 @@ li{
 }
 
 .futuraSC{
-    font-family: 'Futura';
+    font-family: "futura-pt", Arial, Helvetica, sans-serif;
     font-size: .75em;
+    font-weight: 500;
     line-height:4;
     letter-spacing: .05em;
 }
@@ -226,22 +227,11 @@ LOADING ANIMATION
 }
 
 
-/*FONTS*/
-
-
-@font-face{
-    
-    font-family:'Futura';
-    font-weight: normal;
-    font-style: normal;
-    src:url(webfonts/futura.ttc);
-}
-
-
 
 /*MEDIA QUERIES*/
 @media(min-width:480px){
     
+/*
     header::before{
         
         content:'480x';
@@ -249,6 +239,7 @@ LOADING ANIMATION
         top:0;
         left:0;
     }
+*/
     
   
 }
@@ -256,6 +247,7 @@ LOADING ANIMATION
 
 @media (min-width : 750px){
     
+/*
       header::before{
         
         content:'750x';
@@ -263,6 +255,7 @@ LOADING ANIMATION
         top:0;
         left:0;
     }
+*/
    
       header{
         
@@ -274,6 +267,7 @@ LOADING ANIMATION
 
 @media(min-width: 980px){
     
+/*
       header::before{
         
         content:'980px';
@@ -281,6 +275,7 @@ LOADING ANIMATION
         top:0;
         left:0;
     }
+*/
     
     header{
         
@@ -337,6 +332,7 @@ img{
 }
 
 @media(min-width:1280px ){
+/*
     header::before{
         
         content:'1280px';
@@ -345,6 +341,7 @@ img{
         left:0;
     }
     
+*/
     
     
   
@@ -354,6 +351,7 @@ img{
 @media(min-width:1920px ){
     
     
+/*
      header::before{
         
         content:'1920px';
@@ -361,6 +359,7 @@ img{
         top:0;
         left:0;
     }
+*/
     
       header{
         
@@ -394,10 +393,26 @@ img{
     }
     
     h2{
-        max-width: 45%;
+        font-size: 1.2em;
+        max-width: 60%;
     }
     
+    .futuraSC{
+        
+        font-size: .
+    }    
+
+}
+
+
+@media(orientation:portrait){
     
+    img{
+        display: block;
+        max-width: 80%;
+        margin: 0 auto;
+
+    }
     
 }
 
