--- a/portraits-styles.css
+++ b/portraits-styles.css
@@ -27,10 +27,8 @@
         
       USE THIS TO SEE THE BOXES AROUND ELEMENTS   
 */
-/*
         
-        outline: 1px dashed red; 
-*/
+/*        outline: 1px dashed red; */
     }
 
 body{
@@ -130,12 +128,12 @@ figure{
         margin: 0 auto;
 }
 
-.horizontalCover{
+#horizontalCover{
     max-width: 100%;
     
 }
 
-.horizontalCover figcaption{
+#horizontalCover figcaption{
     
     max-width: 70%;
     margin: 0 auto;
@@ -172,11 +170,12 @@ h2{
       font-family: 'WolpePegasus-Regular', "Book Antiqua", "Palatino Linotype", serif;
     max-width: 80%;
     margin: 0 auto;
-    font-size: 1.3em; 
+    font-size: 1.2em; 
+    letter-spacing: 0;
     font-weight: bold;
     line-height: 1.5;
     text-align: center;
-    color: #51504b;
+    color: #163a47;
 
 
 
@@ -472,10 +471,46 @@ LOADING ANIMATION
         
     }
     
-  
-    .horizontalCover img{
+    
+    #horizontalCover{
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
         
-        max-width: 60%;
+        overflow: hidden;
+        
+        -webkit-box-orient: vertical;
+        
+        -webkit-box-direction: normal;
+        
+        -ms-flex-direction: column;
+        
+        flex-direction: column;
+        
+        
+    }
+    
+    #horizontalCover figcaption{
+        
+        max-width: 100%;
+        margin:0;
+        padding: 0; 
+         
+    }
+    
+    #horizontalCover img{
+        
+        max-width: 100%;
+    }
+    
+    #horizontalCover figcaption p,  #horizontalCover figcaption h3{
+        
+        max-width: 100%; 
+        width: 100%;
+        float: left; 
+        padding: 0; 
+       
+        
+        
     }
     
   
@@ -502,6 +537,51 @@ LOADING ANIMATION
     .imageWrapper{
         padding: 0%;
     }  
+    
+    
+        
+        
+    
+    #horizontalCover{
+        -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+        
+        overflow: hidden;
+        
+        -webkit-box-orient: horizontal;
+        
+        -webkit-box-direction: normal;
+        
+        -ms-flex-direction: row;
+        
+        flex-direction: row;
+        
+        
+    }
+    
+    #horizontalCover figcaption{
+        
+        max-width: inherit;
+        margin:0;
+        padding: 0; 
+         
+    }
+    
+    #horizontalCover img{
+        
+        max-width: 60%;
+    }
+    
+    #horizontalCover figcaption p,  #horizontalCover figcaption h3{
+        
+        max-width: 80%; 
+        float: right;
+        padding: 0; 
+       
+        
+        
+    }
+    
     
 }
 
@@ -537,7 +617,7 @@ LOADING ANIMATION
     }
     
     h2{
-        font-size: 1.75em;
+        font-size: 1.5em;
         max-width: 70%;
     }
     
@@ -556,6 +636,7 @@ LOADING ANIMATION
         font-size: 1.1em;
         
     }
+
     
     
 }
