made h2 not bold

--- a/portraits-styles.css
+++ b/portraits-styles.css
@@ -172,7 +172,7 @@ h2{
     margin: 0 auto;
     font-size: 1em; 
     letter-spacing: 0;
-    font-weight: bold;
+    font-weight: normal;
     line-height: 1.5;
     text-align: center;
     color: #163a47;
